biscuit-terminal/lib/tests/snapshots/layout_matrix__Progress__align_center.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
                      Loading [███████████████·····]  75%
---
VIA_TREE_DIRECT
                      Loading [███████████████·····]  75%
