biscuit-terminal/lib/tests/snapshots/layout_matrix__Progress__max_width_40.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
Loading [███████████████·····]  75%
---
TREE
Loading [███████████████·····]  75%
