biscuit-terminal/lib/tests/snapshots/layout_matrix__Progress__width_40.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
Loading [███████████████·····]  75%
---
TREE
Loading [███████████████·····]  75%
